# practical-haskell

./: .gitignore  LICENSE  README.md
01-getting-started/src/: AssignmentGetLine.hs  AssignmentNumbers.hs  Assignments.hs  Main.hs
02-importing-code/: my-project.cabal
02-importing-code/src/: Assignment.hs  Main.hs
03-using-monads/: my-project.cabal
03-using-monads/src/: Assignments.hs  Main.hs
04-rest-api/: my-project.cabal
04-rest-api/src/: Assignments.hs  Main.hs
getting-started/: stack.yaml
getting-started/src/: Main.hs
