name:                my-project
version:             0.1.0.0
synopsis:            My first Haskell Project
description:         Please see README.md
license:             BSD3
author:              Your name here
maintainer:          your.address@example.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable my-project
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       time,
                       aeson
